--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -120,6 +120,7 @@ jobs:
             README.md                            \
             LICENSE                              \
             templates                            \
+            assets/                              \
             scripts/                             \
             styles/                              \
             packs/                               \
