--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -119,13 +119,10 @@ jobs:
             module.json                          \
             README.md                            \
             LICENSE                              \
-            templates                            \
             assets/                              \
             scripts/                             \
             styles/                              \
-            packs/                               \
-            language/                            \
-            lang/
+            languages/                           
           # Don't forget to add a backslash at the end of the line for any
           # additional files or directories!
 
